--- a/front-end/src/pages/Auth.module.css
+++ b/front-end/src/pages/Auth.module.css
@@ -72,7 +72,7 @@
 .button:hover {
     background: #03e9f4;
     color: #050801;
-    box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4; /* Эффект свечения */
+    box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4; 
 }
 
 .switch {
