--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -2,14 +2,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box; /* Чтобы padding не ломал размеры */
+
 }
 
 body {
-    /* Убираем белую рамку */
     margin: 0; 
     padding: 0;
-    
-    /* Задаем базовый фон на случай, если контент короче экрана */
+    height: 100%;
+    overflow: hidden;
+
     background-color: #0f0c29; 
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
